<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    app:cardCornerRadius="10dp"
    android:background="#FAFAFA"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp"
    app:cardElevation="3dp"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/people_name"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/peopleName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="mostafa"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/people_height"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/peopleHeight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="150"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/people_mass"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/peopleMass"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="120"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/people_birthday"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/peopleBirthday"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="128hh"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/people_gender"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/peopleGender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="male"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/people_skin_color"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/peopleSkinColor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="white"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/people_eye_care"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/peopleEyeColor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="blue"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/people_hair_color"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/peopleHairColor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="red"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.cardview.widget.CardView>


</layout>