<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    app:cardCornerRadius="10dp"
    android:background="#FAFAFA"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp"
    app:cardElevation="3dp"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/species_name"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/speciesName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="human"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/species_classification"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/speciesClassification"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="m"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/species_designation"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/speciesDesignation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="120"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/species_average_height"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/speciesAverageHeight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="128hh"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/species_skin_colors"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/speciesSkinColor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="male,s,s,d,df,df,f"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/species_hair_colors"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/speciesHairColor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="white"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/species_eye_colors"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/speciesEyeColor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="blue"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/species_language"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/speciesLang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="red"
                android:textStyle="bold"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.cardview.widget.CardView>


</layout>